--- a/joine-admin/src/main/resources/application.yml
+++ b/joine-admin/src/main/resources/application.yml
@@ -129,7 +129,7 @@ gen:
   # 作者
   author: JenphyJohn
   # 默认生成包路径 system 需改成自己的模块名称 如 system monitor tool
-  packageName: com.github.joine.system
+  packageName: com.github.joine.business
   # 自动去除表前缀，默认是true
   autoRemovePre: true
   # 表前缀(类名不会包含表前缀)
