防SQL注入优化,移动端自适应优化,UI调整

--- a/joine-admin/src/main/resources/application-druid.yml
+++ b/joine-admin/src/main/resources/application-druid.yml
@@ -41,6 +41,8 @@ spring:
             statViewServlet:
                 enabled: true
                 url-pattern: /monitor/druid/*
+                # 白名单，不填则允许所有访问
+                allow:
             filter:
                 stat:
                     # 慢SQL记录
