--- a/pom.xml
+++ b/pom.xml
@@ -28,8 +28,10 @@
 		<oshi.version>3.9.1</oshi.version>
 		<commons.io.version>2.5</commons.io.version>
 		<commons.fileupload.version>1.3.3</commons.fileupload.version>
+		<commons.beanutils.version>1.9.3</commons.beanutils.version>
 		<jsoup.version>1.11.3</jsoup.version>
-		<poi.version>3.17</poi.version><velocity.version>1.7</velocity.version>
+		<poi.version>3.17</poi.version>
+		<velocity.version>1.7</velocity.version>
 	</properties>
 
 	<!-- 依赖声明 -->
@@ -134,6 +136,13 @@
 				<groupId>commons-fileupload</groupId>
 				<artifactId>commons-fileupload</artifactId>
 				<version>${commons.fileupload.version}</version>
+			</dependency>
+
+			<!-- 简化反射封装工具类 -->
+			<dependency>
+				<groupId>commons-beanutils</groupId>
+				<artifactId>commons-beanutils</artifactId>
+				<version>${commons.beanutils.version}</version>
 			</dependency>
 
 			<!-- HTML解析器 -->
