优化代码生成及日志Aspect

--- a/pom.xml
+++ b/pom.xml
@@ -202,6 +202,7 @@
 		<module>joine-quartz</module>
 		<module>joine-generator</module>
         <module>joine-common</module>
+        <!--<module>joine-auth</module>-->
     </modules>
     <packaging>pom</packaging>
 
