--- a/joine-common/pom.xml
+++ b/joine-common/pom.xml
@@ -16,6 +16,12 @@
 	</description>
 
     <dependencies>
+		<!--Shiro核心框架 -->
+		<dependency>
+			<groupId>org.apache.shiro</groupId>
+			<artifactId>shiro-core</artifactId>
+		</dependency>
+
 		<!-- Spring框架基本的核心工具 -->
 		<dependency>
 			<groupId>org.springframework</groupId>
