--- a/joine-restapi/pom.xml
+++ b/joine-restapi/pom.xml
@@ -50,6 +50,16 @@
             <artifactId>springfox-swagger2</artifactId>
         </dependency>
 
+        <!--防止进入swagger页面报类型转换错误，排除2.9.2中的引用，手动增加1.5.21版本-->
+        <dependency>
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-annotations</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-models</artifactId>
+        </dependency>
+
         <!-- swagger2-UI-->
         <dependency>
             <groupId>io.springfox</groupId>
