优化返回体工具, 新增自定义异常, 增加小程序包

--- a/joine-common/pom.xml
+++ b/joine-common/pom.xml
@@ -87,6 +87,14 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 		</dependency>
+
+		<!-- 使用@ConfigurationProperties -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
+
     </dependencies>
 
 </project>
