--- a/joine-restapi/src/main/resources/profiles/dev/application.yml
+++ b/joine-restapi/src/main/resources/profiles/dev/application.yml
@@ -72,9 +72,9 @@ spring:
   # 邮箱配置
   mail:
     host: smtp.qq.com
-    username: xxxxx
+    username: xxxxxxxx
     # QQ邮箱的授权码
-    password: xxxxx
+    password: xxxxxxxx
     default-encoding: UTF-8
     properties:
       mail:
@@ -143,8 +143,8 @@ xss:
 wx:
   miniapp:
     configs:
-        - appid: wx5b3b58508f97b75b
-          secret: xxxxxx
+        - appid: xxxxxxxx
+          secret: xxxxxxxx
           token: #微信小程序消息服务器配置的token
           aesKey: #微信小程序消息服务器配置的EncodingAESKey
           msgDataFormat: JSON
@@ -152,3 +152,13 @@ wx:
 # swagger开关
 swagger:
   enable: true
+
+# 七牛
+qiniu:
+  key:
+    access: xxxxxxxx
+    secret: xxxxxxxx
+  video:
+    bucket:
+      name: joine
+      host: https://qiniu.join-e.tech/
