--- a/joine-common/pom.xml
+++ b/joine-common/pom.xml
@@ -113,6 +113,22 @@
 			<artifactId>qiniu-java-sdk</artifactId>
 		</dependency>
 
+		<!-- 阿里云OSS -->
+		<dependency>
+			<groupId>com.aliyun.oss</groupId>
+			<artifactId>aliyun-sdk-oss</artifactId>
+		</dependency>
+
+		<!-- 阿里大鱼短信SDK  -->
+		<dependency>
+			<groupId>com.aliyun</groupId>
+			<artifactId>aliyun-java-sdk-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.aliyun</groupId>
+			<artifactId>aliyun-java-sdk-dysmsapi</artifactId>
+		</dependency>
+
     </dependencies>
 
 </project>
