--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,9 @@
 		<jwt.version>3.4.0</jwt.version>
 		<fastjson.version>1.2.58</fastjson.version>
 		<qiniu.version>[7.2.0, 7.2.99]</qiniu.version>
+		<aliyun.oss.version>3.6.0</aliyun.oss.version>
+		<aliyun.sdk.version>4.4.5</aliyun.sdk.version>
+		<aliyun.sms.version>1.1.0</aliyun.sms.version>
 	</properties>
 
 	<!-- 依赖声明 -->
@@ -202,6 +205,25 @@
 				<groupId>com.qiniu</groupId>
 				<artifactId>qiniu-java-sdk</artifactId>
 				<version>${qiniu.version}</version>
+			</dependency>
+
+			<!-- 阿里云OSS -->
+			<dependency>
+				<groupId>com.aliyun.oss</groupId>
+				<artifactId>aliyun-sdk-oss</artifactId>
+				<version>${aliyun.oss.version}</version>
+			</dependency>
+
+			<!-- 阿里大鱼短信SDK  -->
+			<dependency>
+				<groupId>com.aliyun</groupId>
+				<artifactId>aliyun-java-sdk-core</artifactId>
+				<version>${aliyun.sdk.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.aliyun</groupId>
+				<artifactId>aliyun-java-sdk-dysmsapi</artifactId>
+				<version>${aliyun.sms.version}</version>
 			</dependency>
 
 			<!-- 定时任务-->
