--- a/joine-admin/src/main/resources/profiles/test/application-druid.yml
+++ b/joine-admin/src/main/resources/profiles/test/application-druid.yml
@@ -6,7 +6,7 @@ spring:
         druid:
             # 主库数据源
             master:
-                url: jdbc:mysql://10.211.55.3:3306/je?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false
+                url: jdbc:mysql://127.0.0.1:3306/je?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&serverTimezone=GMT%2B8
                 username: root
                 password: root
             # 从库数据源
