--- a/joine-admin/src/main/resources/profiles/test/application.yml
+++ b/joine-admin/src/main/resources/profiles/test/application.yml
@@ -1,13 +1,13 @@
 # 项目相关配置
 joine:
   # 名称
-  name: Joine
+  name: Joine-Management
   # 版本
   version: 1.0.0
   # 版权年份
   copyrightYear: 2019
   # 文件上传路径
-  profile: /Users/jenphyjohn/Storage/joine_file/
+  profile: /Users/jenphyjohn/Storage/joine_file
   # 获取ip地址开关
   addressEnabled: true
 
@@ -17,7 +17,7 @@ server:
   port: 8080
   servlet:
     # 项目contextPath
-    context-path: /
+    context-path: /mana
   tomcat:
     # tomcat的URI编码
     uri-encoding: UTF-8
@@ -25,7 +25,7 @@ server:
     max-threads: 800
     # Tomcat启动初始化的线程数，默认值25
     min-spare-threads: 30
- 
+
 # 日志配置
 logging:
   level:
@@ -40,6 +40,10 @@ user:
 
 # Spring配置
 spring:
+  # 控制台输出颜色
+  output:
+    ansi:
+      enabled: ALWAYS
   # 模板引擎
   thymeleaf:
     mode: HTML
@@ -53,13 +57,13 @@ spring:
   jackson:
     time-zone: GMT+8
     date-format: yyyy-MM-dd HH:mm:ss
-  profiles: 
+  profiles:
     active: druid
   # 文件上传
   servlet:
      multipart:
-       max-file-size:  30MB
-       max-request-size:  30MB
+       max-file-size:  10MB
+       max-request-size:  20MB
   # 服务模块
   devtools:
     restart:
@@ -68,9 +72,9 @@ spring:
   # 邮箱配置
   mail:
     host: smtp.qq.com
-    username: xxxxxxxx
+    username: user_email
     # QQ邮箱的授权码
-    password: xxxxxxxx
+    password: user_password
     default-encoding: UTF-8
     properties:
       mail:
@@ -79,6 +83,12 @@ spring:
           starttls:
             enable: true
             required: true
+  # Redis配置
+  redis:
+    host: 127.0.0.1
+    port: 6379
+    database: 0
+    password: root
 
 # MyBatis
 mybatis:
@@ -90,11 +100,11 @@ mybatis:
     configLocation: classpath:mapper/mybatis-config.xml
 
 # PageHelper分页插件
-pagehelper: 
+pagehelper:
   helperDialect: mysql
   reasonable: true
   supportMethodsArguments: true
-  params: count=countSql 
+  params: count=countSql
 
 # Shiro
 shiro:
@@ -111,7 +121,7 @@ shiro:
     captchaType: char
   cookie:
     # 设置Cookie的域名 默认空，即当前访问的域名
-    domain: 
+    domain:
     # 设置cookie的有效访问路径
     path: /
     # 设置HttpOnly属性
@@ -131,7 +141,7 @@ shiro:
     kickoutAfter: false
 
 # 防止XSS攻击
-xss: 
+xss:
   # 过滤开关
   enabled: true
   # 排除链接（多个用逗号分隔）
@@ -145,10 +155,47 @@ swagger:
 
 # 七牛
 qiniu:
-  key:
-    access: xxxxxxxx
-    secret: xxxxxxxx
-  video:
-    bucket:
-      name: joine
-      host: https://qiniu.join-e.tech/
+  accessKey: qiniu_accessKey
+  secretKey: qiniu_secretKey
+  bucketName: qiniu_bucketName
+  host: qiniu_host
+
+# 支付
+pay:
+  alipay:
+    gatewayUrl: alipay_gatewayUrl
+    appid: alipay_appid
+    appPrivateKey: alipay_appPrivateKey
+    alipayPublicKey: alipay_alipayPublicKey
+    notifyUrl: alipay_notifyUrl
+    timeoutExpress: 30m
+
+# 阿里云
+aliyun:
+  oss:
+    #OSS对应的区域
+    bucketName: aliyun_oss_bucketName
+    accessKeyId: aliyun_oss_bucketName
+    accessKeySecret: aliyun_oss_bucketName
+    endpoint: http://oss-cn-beijing.aliyuncs.com
+    loadpoint: http://${aliyun.oss.bucketName}.oss-cn-beijing.aliyuncs.com
+  sts:
+    roleArn: aliyun_sts_roleArn
+    roleSessionName: aliyun_sts_roleSessionName
+    accessKeyId: aliyun_sts_accessKeyId
+    accessKeySecret: aliyun_sts_accessKeySecret
+    endpoint: sts.cn-beijing.aliyuncs.com
+  sms:
+    accessKeyId: aliyun_sms_accessKeyId
+    accessKeySecret: aliyun_sms_accessKeySecret
+    signName: aliyun_sms_signName
+
+# 华为OBS
+huawei:
+  obs:
+    bucketName: huawei_bucketName
+    accessKey: huawei_accessKey
+    secretKey: huawei_secretKey
+    # OBS对应的区域
+    endPoint: https://obs.cn-east-2.myhuaweicloud.com
+    loadPoint: https://${huawei.obs.bucketName}.obs.cn-east-2.myhuaweicloud.com
